tests/ui/argument-suggestions/suggest-better-removing-issue-126246.stderr
error[E0425]: cannot find value `no_such_local` in this scope
  --> $DIR/suggest-better-removing-issue-126246.rs:11:13
   |
LL |     add_one(no_such_local, 10);
   |             ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `no_such_local` in this scope
  --> $DIR/suggest-better-removing-issue-126246.rs:13:17
   |
LL |     add_one(10, no_such_local);
   |                 ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `no_such_local` in this scope
  --> $DIR/suggest-better-removing-issue-126246.rs:15:17
   |
LL |     add_two(10, no_such_local, 10);
   |                 ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `no_such_local` in this scope
  --> $DIR/suggest-better-removing-issue-126246.rs:17:13
   |
LL |     add_two(no_such_local, 10, 10);
   |             ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `no_such_local` in this scope
  --> $DIR/suggest-better-removing-issue-126246.rs:19:21
   |
LL |     add_two(10, 10, no_such_local);
   |                     ^^^^^^^^^^^^^ not found in this scope

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/suggest-better-removing-issue-126246.rs:10:5
   |
LL |     add_one(2, 2);
   |     ^^^^^^^    - unexpected argument #2 of type `{integer}`
   |
note: function defined here
  --> $DIR/suggest-better-removing-issue-126246.rs:1:4
   |
LL | fn add_one(x: i32) -> i32 {
   |    ^^^^^^^
help: remove the extra argument
   |
LL -     add_one(2, 2);
LL +     add_one(2);
   |

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/suggest-better-removing-issue-126246.rs:11:5
   |
LL |     add_one(no_such_local, 10);
   |     ^^^^^^^ ------------- unexpected argument #1
   |
note: function defined here
  --> $DIR/suggest-better-removing-issue-126246.rs:1:4
   |
LL | fn add_one(x: i32) -> i32 {
   |    ^^^^^^^
help: remove the extra argument
   |
LL -     add_one(no_such_local, 10);
LL +     add_one(10);
   |

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/suggest-better-removing-issue-126246.rs:13:5
   |
LL |     add_one(10, no_such_local);
   |     ^^^^^^^     ------------- unexpected argument #2
   |
note: function defined here
  --> $DIR/suggest-better-removing-issue-126246.rs:1:4
   |
LL | fn add_one(x: i32) -> i32 {
   |    ^^^^^^^
help: remove the extra argument
   |
LL -     add_one(10, no_such_local);
LL +     add_one(10);
   |

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> $DIR/suggest-better-removing-issue-126246.rs:15:5
   |
LL |     add_two(10, no_such_local, 10);
   |     ^^^^^^^     ------------- unexpected argument #2
   |
note: function defined here
  --> $DIR/suggest-better-removing-issue-126246.rs:5:4
   |
LL | fn add_two(x: i32, y: i32) -> i32 {
   |    ^^^^^^^
help: remove the extra argument
   |
LL -     add_two(10, no_such_local, 10);
LL +     add_two(10, 10);
   |

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> $DIR/suggest-better-removing-issue-126246.rs:17:5
   |
LL |     add_two(no_such_local, 10, 10);
   |     ^^^^^^^ ------------- unexpected argument #1
   |
note: function defined here
  --> $DIR/suggest-better-removing-issue-126246.rs:5:4
   |
LL | fn add_two(x: i32, y: i32) -> i32 {
   |    ^^^^^^^
help: remove the extra argument
   |
LL -     add_two(no_such_local, 10, 10);
LL +     add_two(10, 10);
   |

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
  --> $DIR/suggest-better-removing-issue-126246.rs:19:5
   |
LL |     add_two(10, 10, no_such_local);
   |     ^^^^^^^         ------------- unexpected argument #3
   |
note: function defined here
  --> $DIR/suggest-better-removing-issue-126246.rs:5:4
   |
LL | fn add_two(x: i32, y: i32) -> i32 {
   |    ^^^^^^^
help: remove the extra argument
   |
LL -     add_two(10, 10, no_such_local);
LL +     add_two(10, 10);
   |

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0061, E0425.
For more information about an error, try `rustc --explain E0061`.
